--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
     text-align: center;
    
 }
-.gb1, .gb2, .gb3,.gb0 {
+.gb1, .gb2, .gb3,.gb0{
     padding: 20px;
     font-family: "Comic Sans MS", "Comic Sans", cursive;
     background-color: gray;
@@ -85,4 +85,104 @@ body {
     font-size: 25px;
     padding: 30px;
     border-radius: 40px;
+}
+.gbm
+{
+text-align: center;
+font-size: 20px;
+}
+.kot img
+{
+    position-anchor:inherit;
+    text-align: center; 
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    display: block;
+    background-color: wheat;
+}
+.kot:hover img
+{
+    position-anchor:inherit;
+    text-align: center; 
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    display: block;
+    background-color: wheat;
+}
+.game-toggle {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    cursor: pointer;
+}
+
+#gameButton {
+    width: 50px;
+    height: 50px;
+    border-radius: 10px;
+}
+
+#gameContainer {
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    height: 500px;
+    background-color: #233d42;
+    text-align: center;
+    display: none;
+    padding: 10px;
+}
+
+.skater {
+    width: 120px;  /* Mniejszy gracz */
+    height: 100px; /* Mniejszy gracz */
+    object-fit: cover;
+    background-image: url('jazda.jpg');
+    background-size: cover;
+    position: absolute;
+    bottom: 50px;
+    left: 50px;
+}
+.skater img {
+    width: 120px;  /* Stała szerokość gracza */
+    height: 100px; /* Stała wysokość gracza */
+    object-fit: cover; /* Zapewnia, że obraz nie będzie zniekształcony */
+}
+
+
+.obstacle {
+    width: 40px;  /* Mniejsza przeszkoda */
+    height: 50px; /* Mniejsza przeszkoda */
+    background-color: blueviolet;
+    position: absolute;
+    bottom: 50px;
+    right: 0;
+}
+
+.score, .best-score {
+    position: absolute;
+    color: white;
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    font-size: 18px;
+}
+
+.score {
+    left: 20px;
+}
+
+.best-score {
+    right: 20px;
+}
+
+.center-text {
+    position: absolute;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: white;
+    font-size: 18px;
 }
